...
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                <nil key="textColor"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Pau-uq-OFc">
                                                <rect key="frame" x="0.0" y="46.666666666666686" width="319" height="47"/>
                                                <accessibility key="accessibilityConfiguration" identifier="celciusTextField"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
                                            </textField>
                                        </subviews>
                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                        <constraints>
...
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                <nil key="textColor"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="RuI-Rv-Hgy">
                                                <rect key="frame" x="0.0" y="46.666666666666686" width="319" height="46.666666666666657"/>
                                                <accessibility key="accessibilityConfiguration" identifier="fahrenheitTextField"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits"/>
                                            </textField>
                                        </subviews>
                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                        <constraints>
...
                                            <constraint firstItem="N08-4e-cBN" firstAttribute="width" secondItem="UgJ-h9-KF5" secondAttribute="width" id="tJ5-H5-q8S"/>
                                        </constraints>
                                    </view>
                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Tw1-25-Udv" userLabel="Row4">
                                        <rect key="frame" x="0.0" y="280.66666666666669" width="319" height="93.666666666666686"/>
                                        <subviews>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="F6l-mg-rRa" userLabel="Convertir">
                                                <rect key="frame" x="95.666666666666657" y="33" width="127.66666666666666" height="28"/>
                                                <accessibility key="accessibilityConfiguration" label="Convertir"/>
                                                <state key="normal" title="Convertir"/>
                                                <connections>
                                                    <action selector="convertToFarenheit:" destination="BYZ-38-t0r" eventType="touchUpInside" id="TSe-7w-yPq"/>
                                                </connections>
...
